# Proton2D

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  proton2d.txt  xmake.lua
android_build/: local.properties
android_build/app/: build.gradle
android_build/app/src/main/java/org/libsdl/app/: SDLActivity.java
ext/: README.md
include/: menu.hh  ss.hh
include/proton/: audio.hh  errorTexture.hh  logman.hh  physics.hh  proton.hh  resourcemanager.hh  scene.hh  utf8helper.hh
include/proton/shapes/: buttonarea.hh  circle.hh  circlebutton.hh  container.hh  group.hh  image.hh  imagebutton.hh  line.hh  progressbar.hh  rectangle.hh  rectanglebutton.hh  shape.hh  text.hh  textbox.hh
proton/: proton.hh  utf8helper.hh
proton/shapes/: buttonarea.hh  circle.hh  container.hh  group.hh  image.hh  progressbar.hh  rectangle.hh  rectanglebutton.hh  shape.hh  text.hh  textbox.hh
src/: HandleFrame.cpp  HandleFrame.h  main.cc  main.cpp  menu.cc  menu.hh  ss.cc  ss.hh
src/jni/: JNIBindings.cpp
src/proton/: audio.cc  audio.hh  logman.cc  logman.hh  physics.cc  proton.cc  proton.hh  resourcemanager.cc  resourcemanager.hh  scene.cc  scene.hh  utf8helper.hh
src/proton/shapes/: buttonarea.cc  buttonarea.hh  circle.cc  circle.hh  circlebutton.cc  container.cc  container.hh  group.cc  group.hh  image.cc  image.hh  imagebutton.cc  imagebutton.hh  line.cc  line.hh  progressbar.cc  progressbar.hh  rectangle.cc  rectangle.hh  rectanglebutton.cc  rectanglebutton.hh  shape.cc  shape.hh  text.cc  text.hh  textbox.cc  textbox.hh
